# statsbomb_modeling

./: .env.example  .gitignore  README.md  create_notebook.py  pyproject.toml  test_rag_system.py
docs/: RAG_ARCHITECTURE.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  SuggestionCard.tsx  WelcomeScreen.tsx
frontend/src/services/: api.ts
notebooks/: talent_scouting_analysis.ipynb
scripts/: setup_rag_database.py
src/: __init__.py  api.py  data_loader.py  feature_engineering.py  models.py  rag_generation.py  rag_ingestion.py  rag_retrieval.py  visualization.py
tests/: __init__.py  test_data_loader.py
