[tool.poetry]
name = "statsbomb-talent-scouting"
version = "0.1.0"
description = "Advanced ML system for soccer talent scouting and RAG-powered chatbot using StatsBomb data"
authors = ["Lucas Qiu <lqiu03@g.ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
lightgbm = "^4.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
jupyter = "^1.0.0"
nbformat = "^5.9.0"
ipykernel = "^6.29.0"
shap = "^0.44.0"
optuna = "^3.5.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
scipy = "^1.12.0"
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"
google-generativeai = "^0.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
